k8s/deployment.tmpl.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      name: web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - name: web-lang-server
          image: asia.gcr.io/${GCP_PROJECT_NAME}/inspectorium:${WERCKER_GIT_COMMIT}
          ports:
            - containerPort: 4000
              protocol: TCP
              name: http
          imagePullPolicy: Always
