k8s/service.tmpl.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
spec:
  type: NodePort 
  selector:
    name: web
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
