k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
spec:
  selector:
    name: web
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      targetPort: 4000
