k8s/ingress.tmpl.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # requirements: create static ip via:
    # $ gcloud compute addresses create ingress-ip --global
    kubernetes.io/ingress.global-static-ip-name: ingress-ip
spec:
  rules:
  - http:
      paths:
      - path: /master
        backend:
          serviceName: web-master
          servicePort: 4000
#     - path: /${WERCKER_GIT_BRANCH}
#       backend:
#         serviceName: web-${WERCKER_GIT_BRANCH}
#         servicePort: 4000
